[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iacguard"
version = "0.1.0"
description = "Terraform pre-apply risk and blast radius analyzer"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Adil Khan", email = "adilk81054@gmail.com" }
]
keywords = ["terraform", "devops", "security", "iac", "aws", "infrastructure"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration",
]
dependencies = ["colorama>=0.4.6"]

[project.urls]
Homepage = "https://github.com/adil-khan-723/iacguard"
Repository = "https://github.com/adil-khan-723/iacguard"
"Bug Tracker" = "https://github.com/adil-khan-723/iacguard/issues"

[project.scripts]
iacguard = "iacguard.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["iacguard*"]
